Updated dependency versions. Used Gradle-Lombok-plugin instead of explicitly specifying the dependency. Used 'toolchain' in the Java-plugin instead of 'JavaVersion.VERSION_xx'. Fixed 'native access' warning when running tests.